--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <article>
                     <header>
                         <!-- the article's header goes here -->
-                         <h2>Projects so far</h2>
+                         <h2>Cat Kitty cat cat Kitty cat cat</h2>
                          <h3>Read Time : 5 minutes</h3>
                     </header>
                     <main>
